Fix broken checkboxes

--- a/app/templates/user/edit.hbs
+++ b/app/templates/user/edit.hbs
@@ -107,15 +107,11 @@
 
                   <div class="form-group">
                     <div class="checkbox">
-                      <label class="col-md-8" for="notifyForContest">Get notifications for new contests?
-                        <input type="checkbox" name="notifyForContest" id="notifyForContest" value="1" />
-                      </label>
+                      <label> {{input type="checkbox"}} Get notifications for new contests? </label>
                     </div>
 
                     <div class="checkbox">
-                      <label class="col-md-8" for="hideContactInfo">Hide contact information?
-                        <input type="checkbox" name="hideContactInfo" id="hideContactInfo" value="1" />
-                      </label>
+                      <label> {{input type="checkbox"}} Hide contact information?  </label>
                     </div>
                   </div>
 
