--- a/app/templates/-navigation.hbs
+++ b/app/templates/-navigation.hbs
@@ -25,7 +25,11 @@
               <li>{{link-to 'My Profile' 'user'}}</li>
               <li>{{link-to 'My Groups'}}</li>
               <li class="divider"></li>
-              <li>{{link-to 'Logout' 'login'}}</li>
+              {{#if session.isAuthenticated}}
+                <li><a {{ action 'invalidateSession' }}>Logout</a></li>
+              {{else}}
+                <li>{{link-to 'Login' 'login'}}</li>
+              {{/if}}
             </ul>
           </li>
         </ul>
