--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -2,7 +2,7 @@
 
   <div class="content clearfix">
 
-    <form action="" method="post">
+    <form {{action 'authenticate' on='submit'}}>
 
       <h1>Sign In</h1>
 
@@ -12,12 +12,12 @@
 
         <div class="field">
           <label for="handle">Username:</label>
-          {{input id="handle" name="handle" placeholder="Handle" class="form-control input-lg handle-field"}}
+          {{input value=identification id='handle' name='handle' placeholder='Handle' class='form-control input-lg handle-field'}}
         </div> <!-- /field -->
 
         <div class="field">
           <label for="password">Password:</label>
-          {{input type="password" id="password" name="password" placeholder="Password" class="form-control input-lg password-field"}}
+          {{input value=password type='password' id='password' name='password' placeholder='Password' class='form-control input-lg password-field'}}
         </div> <!-- /password -->
 
       </div> <!-- /login-fields -->
@@ -29,7 +29,7 @@
           <label class="choice" for="Field">Keep me signed in</label>
         </span>
 
-        <button class="login-action btn btn-primary">Sign In</button>
+        <button type="submit" class="login-action btn btn-primary">Sign In</button>
 
       </div> <!-- .actions -->
 
