--- a/app/templates/signup.hbs
+++ b/app/templates/signup.hbs
@@ -2,26 +2,30 @@
 
   <div class="content clearfix">
 
-    <form action="" method="post">
+    <form {{action 'createUser' on='submit'}}>
 
       <h1>Create Your Account</h1>
 
       <div class="login-fields">
 
         <div class="field">
-          <label for="firstname">First Name:</label>
-          {{input id="firstname" name="firstname" placeholder="First Name" class="form-control"}}
+          <label for="handle">Handle:</label>
+          {{input value=handle name="handle" placeholder="Handle" class="form-control"}}
         </div> <!-- /field -->
 
         <div class="field">
-          <label for="lastname">Last Name:</label>
-          {{input id="lastname" name="lastname" placeholder="Last Name" class="form-control"}}
+          <label for="firstname">First Name:</label>
+          {{input value=firstName name="firstName" placeholder="First Name" class="form-control"}}
         </div> <!-- /field -->
 
+        <div class="field">
+          <label for="lastName">Last Name:</label>
+          {{input value=lastName name="lastName" placeholder="Last Name" class="form-control"}}
+        </div> <!-- /field -->
 
         <div class="field">
           <label for="email">Email Address:</label>
-          {{input id="email" name="email" placeholder="Email" class="form-control"}}
+          {{input value=email name="email" placeholder="Email" class="form-control"}}
         </div> <!-- /field -->
 
         <div class="field">
@@ -43,7 +47,7 @@
           <label class="choice" for="Field">I have read and agree with the Terms of Use.</label>
         </span>
 
-        <button class="login-action btn btn-primary">Register</button>
+        <button type="submit" class="login-action btn btn-primary">Register</button>
 
       </div> <!-- .actions -->
 
