--- a/app/templates/signup.hbs
+++ b/app/templates/signup.hbs
@@ -30,7 +30,7 @@
 
         <div class="field">
           <label for="password">Password:</label>
-          {{input id="password" name="password" placeholder="Password" class="form-control"}}
+          {{input value=password type="password" name="password" placeholder="Password" class="form-control"}}
         </div> <!-- /field -->
 
         <div class="field">
