Add link to edit a user's profile

--- a/app/templates/user/index.hbs
+++ b/app/templates/user/index.hbs
@@ -1,3 +1,5 @@
 <h3>First Name:</h3> {{firstName}} <br />
 <h3>Last Name:</h3> {{lastName}} <br />
 <h3>handle:</h3> {{handle}} <br />
+
+{{link-to 'Edit Profile' 'user.edit'}}
