--- a/app/templates/contest.hbs
+++ b/app/templates/contest.hbs
@@ -1,4 +1,5 @@
 <div>
+  <h2>Welcome to {{title}} {{session.currentUser.handle}}</h2>
   <ul class="nav nav-pills">
     {{#link-to 'contest.index' tagName='li' href=false}} {{link-to 'Problems' 'contest' this}} {{/link-to}}
     {{#link-to 'contest.submission' tagName='li' href=false}} {{link-to 'Submit Code' 'contest.submission'}} {{/link-to}}
