--- a/app/templates/application.hbs
+++ b/app/templates/application.hbs
@@ -1,3 +1,13 @@
-<h2 id="title">Welcome to Ember</h2>
+{{partial "navigation"}}
 
-{{outlet}}
+{{#unless inLoginOrSignup}}
+  {{partial "subnavigation"}}
+{{/unless}}
+
+<div class="main">
+  <div class="container">
+    {{outlet}}
+  </div>
+</div>
+
+{{partial "footer"}}
